--- a/html/semantics/forms/event-propagate-disabled.html
+++ b/html/semantics/forms/event-propagate-disabled.html
@@ -139,7 +139,7 @@
             target.dispatchEvent(new eventInterface(event, { bubbles: true }))
           }
         },
-        title: `Dispatch new ${eventInterface.name}("${event}")`
+        title: `Dispatch new ${eventInterface.name}()`
       })
     }
 
